# MEI-CP2324-project

./: .gitignore  CMakeCache.txt  CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  project  project.cbp
.cmake/api/v1/reply/: cache-v2-e6373a91dcb55c936493.json  cmakeFiles-v1-3de2e476f8260cd2a0db.json  codemodel-v2-8daa0e37dfeb255cebc2.json  directory-googletest.build-Debug-5fcbbb1184dc57f60a06.json  directory-googletest.build.googlemock-Debug-77ad1ed99db7f4aaa358.json  directory-googletest.build.googletest-Debug-31c699e74df9f06489c9.json  index-2024-05-13T16-26-03-0756.json  target-gmock-Debug-f112d013ad3ee4fb6765.json  target-gmock_main-Debug-026f4750054b0a72ddda.json  target-googlebenchmark-Debug-0ccd53f0fec3ae8ed314.json  target-gtest-Debug-ef74e3bbe79b82c24329.json  target-gtest_main-Debug-a5a17c6474a78e4a4546.json  target-histogram_eq_test-Debug-f2898f7b524e5a19954f.json  target-libwb-Debug-2db0f79781c3c32ad450.json  target-project-Debug-05fbc96fd9e1e3b1514a.json  target-template_test-Debug-baf81750fa34d699a64d.json  target-wb-Debug-653d160533959761c40b.json
benchmarking/: CMakeLists.txt  bm_histogram_par.cpp  bm_histogram_par.h
cmake/: CMakeLists.googlebenchmark.in
dataset/: image1024.ppm  image512.ppm  output.ppm
googlebenchmark/src/googlebenchmark-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  benchmarkTargets.cmake  cmake_install.cmake  compile_commands.json
googlebenchmark/src/googlebenchmark-build/Testing/Temporary/: CTestCostData.txt
googlebenchmark/src/googlebenchmark-build/src/: Makefile  cmake_install.cmake
googlebenchmark/src/googlebenchmark-build/test/: CTestTestfile.cmake  Makefile  args_product_test  basic_test  benchmark_gtest  benchmark_min_time_flag_iters_test  benchmark_min_time_flag_time_test  benchmark_name_gtest  benchmark_random_interleaving_gtest  benchmark_setup_teardown_test  benchmark_test  cmake_install.cmake  commandlineflags_gtest  complexity_test  cxx03_test  diagnostics_test  display_aggregates_only_test  donotoptimize_test  filter_test  fixture_test  internal_threading_test  link_main_test  map_test  memory_manager_test  min_time_parse_gtest  multiple_ranges_test  options_test  perf_counters_gtest  perf_counters_test  register_benchmark_test  repetitions_test  report_aggregates_only_test  reporter_output_test  skip_with_error_test  spec_arg_test  spec_arg_verbosity_test  statistics_gtest  string_util_gtest  templated_fixture_test  time_unit_gtest  (+3 more)
googlebenchmark/src/googlebenchmark-stamp/: googlebenchmark-gitclone-lastrun.txt  googlebenchmark-update-info.txt
googlebenchmark/tmp/: googlebenchmark-cfgcmd.txt  googlebenchmark-gitclone.cmake  googlebenchmark-gitupdate.cmake  googlebenchmark-mkdirs.cmake
googletest/download/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
googletest/download/googletest-prefix/src/googletest-stamp/: googletest-gitclone-lastrun.txt  googletest-update-info.txt
googletest/download/googletest-prefix/tmp/: googletest-gitclone.cmake  googletest-gitupdate.cmake  googletest-mkdirs.cmake
include/: histogram_cu.cuh  histogram_cu_f.cuh  histogram_par.h  histogram_par_f.h
libwb/: Makefile  cmake_install.cmake  wb.cbp
report/: acmart.cls  refs.bib  template.tex
scripts/: gen_images.sh
src/: histogram_cu.cu  histogram_cu_f.cu  histogram_eq.cpp  histogram_par.cpp  histogram_par_f.cpp  main.cpp
test/: CMakeLists.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  histogram_eq_test  histogram_eq_test.cpp  template_test  template_test.cpp
